Fix button only spacing

--- a/src/components/content-header-card/content-header-card.module.css
+++ b/src/components/content-header-card/content-header-card.module.css
@@ -148,18 +148,24 @@
 				flex-direction: row-reverse;
 			}
 
-			/* In the case where there are only buttons in the bottom row,
-			we want to left-align them always */
-			&.buttonsOnly {
-				flex-direction: row;
-			}
-
 			& li {
 				&:not(:first-of-type) {
 					margin-left: 12px;
 					@media (--dev-dot-tablet-up) {
 						margin-right: 12px;
 						margin-left: 0;
+					}
+				}
+			}
+
+			/* In the case where there are only buttons in the bottom row,
+			we want to left-align them always */
+			&.buttonsOnly {
+				flex-direction: row;
+				& li {
+					&:not(:first-of-type) {
+						margin-left: 12px;
+						margin-right: 0;
 					}
 				}
 			}
